--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ default: &default
 
 development:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: lifestyle_development
 
 # Warning: The database defined as "test" will be erased and
@@ -27,6 +31,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: lifestyle_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -52,4 +60,6 @@ production:
   <<: *default
   database: lifestyle_production
   username: lifestyle
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
   password: <%= ENV['LIFESTYLE_DATABASE_PASSWORD'] %>
